Prodwork/atefwork/PRODUCTION/farmer-dev-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: farmer-services-dev
  namespace: ns-prx-13
spec:
  ingressClassName: nginx-dev
  rules:
    - host: farmer-services.dev.proxym-it.tn
      http:
        paths:
          - backend:
              service:
               name: farmer-services-dev
               port:
                number: 80
            path: /
            pathType: Prefix
